<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">听刻</string>

    <string name="start_recording">开始录音</string>
    <string name="stop_recording">停止</string>

    <string name="status_idle">未开始</string>
    <string name="status_preparing">正在准备…（首次启动要解压模型，约几秒）</string>
    <string name="status_recording">录音中</string>

    <string name="mark_not_understand">没听懂</string>
    <string name="mark_question">有问题</string>
    <string name="mark_important">重点</string>

    <string name="need_permission">需要麦克风权限才能录音</string>
</resources>